[project]
name = "gold-price-analysis"
version = "0.1.0"
description = "API for Gold Price Analysis for AkwaMining"
authors = [
    {name = "AkwaMining Team"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "fastapi (>=0.104.0)",
    "uvicorn[standard] (>=0.24.0)",
    "pandas (>=2.0.0)",
    "numpy (>=1.24.0)",
    "scikit-learn (>=1.3.0)",
    "statsmodels (>=0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
